# langchain

./: .gitignore
Chanakya/: .gitignore  agent.py  goal.md  pyproject.toml
Chanakya/agent/: agent.py  pyproject.toml  server.py
Chanakya/agent/tools/: scraper.py  text_to_speech.py
Chanakya/tools/: scraper.py  text_to_speech.py
Chanakya/tui/: README.md  package-lock.json  package.json  run-dev.cmd  run.cmd  tsconfig.json
Chanakya/tui/src/: index.ts
Demo's/1/: agent-loop.py  create-agent.py  pyproject.toml  tools.py
RAG/01. RAG/: README.md
RAG/02. Basic-RAG/: ingesation.py  main.py  pyproject.toml
RAG/03. Advance-RAG/: ingest.py  pyproject.toml  search.py
RAG/03. Advance-RAG/src/: vector_store.py
RAG/04. Langchain-doc-rag/: ingetion.py  logger.py  main.py  pyproject.toml
RAG/05. CRAG/: ingestion.py  main.py  pyproject.toml
RAG/05. CRAG/graph/: graph.py
RAG/05. CRAG/graph/chains/: answer_grader.py  generation.py  hallucination_grader.py  retrieval_grader.py  router.py
RAG/05. CRAG/graph/chains/tests/: test_chains.py
RAG/05. CRAG/graph/nodes/: retrieve.py  web_search.py
RAG/05. CRAG/ingestion_pipeline/: data_loader.py  embedding.py  vector_store.py
agent-under-the-hood/: 1_agent_loop_langchain__tool_calling.py  2_agent_loop_raw__function_calling.py  3_raw_react_prompt.py  agent_loop_langchain__tool_calling.py  agent_loop_raw__function_calling.py  main.py  pyproject.toml
basic-book-rag/: embeddings.py
book-rag/: embeddings.py  ingest.py  main.py  pyproject.toml
book-rag/Basic-RAG/: ingesation.py  main.py
book-rag/chroma_db/670eac1a-0b36-4dd5-838c-dc05ab280caa/: index_metadata.pickle
book-rag/src/: data_loader.py  embeddings.py  ingest copy.py
deep-agents/: pyproject.toml
deep-agents/deepagent/: 01.basic-agents.ipynb
hello-world/: main.py  pyproject.toml
langgraph-course/: main.py  nodes.py  pyproject.toml  react.py
mem0/: experiment.ipynb  main.py  pyproject.toml
rag/: ingestion.py  main.py  mediumblog1.txt  pyproject.toml
react-search-agent/: agent_tools.py  main.py  pyproject.toml  schema.py
refleaction-agent/: chain.py  main.py  pyproject.toml
reflexion-agent/: chain.py  main.py  pyproject.toml
