[project]
name = "deep-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.5.1",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-google-genai>=4.2.1",
    "tavily-python>=0.7.23",
]
