[project]
name = "05-crag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "chromadb>=1.5.5",
    "isort>=8.0.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-tavily>=0.2.17",
    "langchainhub>=0.1.21",
    "langgraph>=1.1.6",
    "langsmith>=0.7.25",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "tavily-python>=0.7.23",
]
